atualizacao html add footer

--- a/icons.html
+++ b/icons.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,114 +14,115 @@
     <link rel="stylesheet" href="css/root.css">
 
     <title>Hello, world!</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="dash__container collapse-expand">
-      <div class="dash__container-flex">
-          <!-- add class expand menu -->
-          <section class="dash__section">
-              <div class="dash__section-menu-mobile">
-                  <i class="fas fa-bars"></i>
-              </div>
-              <nav class="dash__nav">
-                <ul class="dash__list">
-                    <!-- button extract retract menu -->
-                    <li class="dash__list-link dash__list-expand expand">
-                        <i class="fas fa-arrow-right expand-item"></i>
-                        <span class="dash__list-name expand-item">Expand</span>
-                        <i class="fas fa-arrow-left retract-item"></i>
-                        <span class="dash__list-name retract-item">Retract</span>
-                    </li>
-                    <!-- //button extract retract menu -->
+        <div class="dash__container-flex">
+            <!-- add class expand menu -->
+            <section class="dash__section">
+                <div class="dash__section-menu-mobile">
+                    <i class="fas fa-bars"></i>
+                </div>
+                <nav class="dash__nav">
+                    <ul class="dash__list">
+                        <!-- button extract retract menu -->
+                        <li class="dash__list-link dash__list-expand expand">
+                            <i class="fas fa-arrow-right expand-item"></i>
+                            <span class="dash__list-name expand-item">Expand</span>
+                            <i class="fas fa-arrow-left retract-item"></i>
+                            <span class="dash__list-name retract-item">Retract</span>
+                        </li>
+                        <!-- //button extract retract menu -->
 
-                    <!-- items menu -->
-                    <li class="dash__list-item">
-                        <a href="index.html" class="dash__list-link">
-                            <i class="fas fa-tachometer-alt"></i>
-                            <span class="dash__list-name">Dashboard</span>
-                        </a>
-                    </li>
-                    <li class="dash__list-item" id="headingOne">
-                        <a  class="dash__list-link" data-toggle="collapse" data-target="#collapseOne" aria-controls="collapseOne">
-                            <i class="fas fa-table"></i>
-                            <span class="dash__list-name">Pages</span>
-                        </a>
-                        <div id="collapseOne" class="collapse" aria-labelledby="headingOne">
-                            <ul class="dash__sub">
-                                <li class="dash__sub-item"><a class="dash__sub-link" href="pages/login.html">Login</a></li>
-                                <li class="dash__sub-item"><a class="dash__sub-link" href="pages/register.html">Register</a></li>
-                                <li class="dash__sub-item"><a class="dash__sub-link" href="pages/forgot.html">Forgot Password</a></li>
-                            </ul>
-                        </div>
-                    </li>
+                        <!-- items menu -->
+                        <li class="dash__list-item">
+                            <a href="index.html" class="dash__list-link">
+                                <i class="fas fa-tachometer-alt"></i>
+                                <span class="dash__list-name">Dashboard</span>
+                            </a>
+                        </li>
+                        <li class="dash__list-item" id="headingOne">
+                            <a class="dash__list-link" data-toggle="collapse" data-target="#collapseOne" aria-controls="collapseOne">
+                                <i class="fas fa-table"></i>
+                                <span class="dash__list-name">Pages</span>
+                            </a>
+                            <div id="collapseOne" class="collapse" aria-labelledby="headingOne">
+                                <ul class="dash__sub">
+                                    <li class="dash__sub-item"><a class="dash__sub-link" href="pages/login.html">Login</a></li>
+                                    <li class="dash__sub-item"><a class="dash__sub-link" href="pages/register.html">Register</a></li>
+                                    <li class="dash__sub-item"><a class="dash__sub-link" href="pages/forgot.html">Forgot Password</a></li>
+                                </ul>
+                            </div>
+                        </li>
 
-                    <li class="dash__list-item" id="headingTwo">
-                      <a  class="dash__list-link" data-toggle="collapse" data-target="#collapseTwo" aria-controls="collapseTwo">
-                          <i class="fas fa-desktop"></i>
-                          <span class="dash__list-name">Elements</span>
-                      </a>
-                      <div id="collapseTwo" class="collapse" aria-labelledby="headingOne">
-                          <ul class="dash__sub">
-                              <li class="dash__sub-item"><a class="dash__sub-link" href="elements-1.html">Elements 1</a></li>
-                              <li class="dash__sub-item"><a class="dash__sub-link" href="elements-2.html">Elements 2</a></li>
-                              <li class="dash__sub-item"><a class="dash__sub-link" href="elements-3.html">Elements 3</a></li>
-                          </ul>
-                      </div>
-                  </li>
-                    
-                  <li class="dash__list-item">
-                    <a href="form.html" class="dash__list-link">
-                        <i class="fas fa-users"></i>
-                        <span class="dash__list-name">Form</span>
-                    </a>
-                </li>
-                <li class="dash__list-item">
-                    <a href="icons.html" class="dash__list-link">
-                      <i class="fas fa-icons"></i>
-                        <span class="dash__list-name">Icons</span>
-                    </a>
-                </li>
-                <!-- //items menu -->
+                        <li class="dash__list-item" id="headingTwo">
+                            <a class="dash__list-link" data-toggle="collapse" data-target="#collapseTwo" aria-controls="collapseTwo">
+                                <i class="fas fa-desktop"></i>
+                                <span class="dash__list-name">Elements</span>
+                            </a>
+                            <div id="collapseTwo" class="collapse" aria-labelledby="headingOne">
+                                <ul class="dash__sub">
+                                    <li class="dash__sub-item"><a class="dash__sub-link" href="elements-1.html">Elements 1</a></li>
+                                    <li class="dash__sub-item"><a class="dash__sub-link" href="elements-2.html">Elements 2</a></li>
+                                    <li class="dash__sub-item"><a class="dash__sub-link" href="elements-3.html">Elements 3</a></li>
+                                </ul>
+                            </div>
+                        </li>
 
-                </ul>
-              </nav>
-          </section>
-          <!-- header -->
-          <header class="header">
-              <div class="header__container">
-                  <div class="search">
-                         <input type="email" class="search__input" placeholder="Search for:">
-                      <button class="search__button">Search<i class="fas fa-search"></i></button>
-                  </div>
-                  <div class="nav__menu">
-                      <ul class="nav__menu-list">
-                          <li class="nav__menu-list-item">
-                              <a href="#" class="nav__menu-list-item-link">
-                                  <i class="fas fa-bell"></i>
-                              </a>
-                          </li>
-                          <li class="nav__menu-list-item">
-                              <a href="#" class="nav__menu-list-item-link px-3">
-                                  <img class="thumb-nail" src="https://i.ibb.co/0VLnn12/thumb.jpg" alt="thumb">
-                                  <span class="ml-3">Username Admin</span>
-                              </a>
-                          </li>
-                      </ul>
-                  </div>
-              </div>
-          </header>
-      </div>
+                        <li class="dash__list-item">
+                            <a href="form.html" class="dash__list-link">
+                                <i class="fas fa-users"></i>
+                                <span class="dash__list-name">Form</span>
+                            </a>
+                        </li>
+                        <li class="dash__list-item">
+                            <a href="icons.html" class="dash__list-link">
+                                <i class="fas fa-icons"></i>
+                                <span class="dash__list-name">Icons</span>
+                            </a>
+                        </li>
+                        <!-- //items menu -->
 
-      <!-- content -->
-      <div class="dash__container-content">
-          <div class="container-fluid p-h-100">
-              <div class="jumbotron jumbotron-fluid">
-                  <div class="container">
-                      <h1 class="display-4">Elements</h1>
-                      <p class="lead">design and code by: <a href="https://www.cupcom.com.br" target="_blank">Cupcom</a></p>
-                  </div>
-              </div>
-              <!-- cards -->
+                    </ul>
+                </nav>
+            </section>
+            <!-- header -->
+            <header class="header">
+                <div class="header__container">
+                    <div class="search">
+                        <input type="email" class="search__input" placeholder="Search for:">
+                        <button class="search__button">Search<i class="fas fa-search"></i></button>
+                    </div>
+                    <div class="nav__menu">
+                        <ul class="nav__menu-list">
+                            <li class="nav__menu-list-item">
+                                <a href="#" class="nav__menu-list-item-link">
+                                    <i class="fas fa-bell"></i>
+                                </a>
+                            </li>
+                            <li class="nav__menu-list-item">
+                                <a href="#" class="nav__menu-list-item-link px-3">
+                                    <img class="thumb-nail" src="https://i.ibb.co/0VLnn12/thumb.jpg" alt="thumb">
+                                    <span class="ml-3">Username Admin</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </header>
+        </div>
+
+        <!-- content -->
+        <div class="dash__container-content">
+            <div class="container-fluid p-h-100">
+                <div class="jumbotron jumbotron-fluid">
+                    <div class="container">
+                        <h1 class="display-4">Elements</h1>
+                        <p class="lead">design and code by: <a href="https://www.cupcom.com.br" target="_blank">Cupcom</a></p>
+                    </div>
+                </div>
+                <!-- cards -->
                 <div class="col-12 bg-white border radius pb-4 mb-5">
                     <div class="dash__title">
                         <i class="fas fa-table"></i>
@@ -143,16 +145,16 @@
                             <li><i class="fa fa-heart"></i>fa-heart</li>
                             <li><i class="fa fa-heart-o"></i>fa-heart-o</li>
                             <li><i class="fa fa-check"></i>fa-check</li>
-                            <li><i class="fa fa-check-square"></i>fa-check-square</li>  
+                            <li><i class="fa fa-check-square"></i>fa-check-square</li>
                             <li><i class="fa fa-check-square-o"></i>fa-check-square-o</li>
                             <li><i class="fa fa-check-circle"></i>fa-check-circle</li>
                             <li><i class="fa fa-check-circle-o"></i>fa-check-circle-o</li>
-                            </ul>
-                            <ul class="nav-list">
+                        </ul>
+                        <ul class="nav-list">
                             <li>Events</li>
                             <li><i class="fa fa-info"></i>fa-info</li>
                             <li><i class="fa fa-info-circle"></i>fa-info-circle</li>
-                            <li><i class="fa fa-question"></i>fa-question</li>  
+                            <li><i class="fa fa-question"></i>fa-question</li>
                             <li><i class="fa fa-question-circle"></i>fa-question-circle</li>
                             <li><i class="fa fa-binoculars"></i>fa-binoculars</li>
                             <li><i class="fa fa-ticket"></i>fa-ticket</li>
@@ -168,8 +170,8 @@
                             <li><i class="fa fa-bed"></i>fa-bed</li>
                             <li><i class="fa fa-map-marker"></i>fa-map-marker</li>
                             <li><i class="fa fa-location-arrow"></i>fa-location-arrow</li>
-                            </ul>
-                            <ul class="nav-list">
+                        </ul>
+                        <ul class="nav-list">
                             <li>Communication</li>
                             <li><i class="fa fa-mail-forward"></i>fa-mail-forward</li>
                             <li><i class="fa fa-share"></i>fa-share</li>
@@ -188,8 +190,9 @@
                             <li><i class="fa fa-send"></i>fa-send</li>
                             <li><i class="fa fa-send-o"></i>fa-send-o</li>
                             <li><i class="fa fa-download"></i>fa-download</li>
-                            <li><i class="fa fa-upload"></i>fa-upload</li></ul>
-                            <ul class="nav-list">
+                            <li><i class="fa fa-upload"></i>fa-upload</li>
+                        </ul>
+                        <ul class="nav-list">
                             <li>Comm. Continued</li>
                             <li><i class="fa fa-phone"></i>fa-phone</li>
                             <li><i class="fa fa-phone-square"></i>fa-phone-square</li>
@@ -209,8 +212,8 @@
                             <li><i class="fa fa-youtube-square"></i>fa-youtube-square</li>
                             <li><i class="fa fa-instagram"></i>fa-instagram</li>
                             <li><i class="fa fa-skype"></i>fa-skype</li>
-                            </ul>
-                            <ul class="nav-list">
+                        </ul>
+                        <ul class="nav-list">
                             <li>Other</li>
                             <li><i class="fa fa-smile-o"></i>fa-smile-o</li>
                             <li><i class="fa fa-meh-o"></i>fa-meh-o</li>
@@ -230,12 +233,15 @@
                             <li><i class="fa fa-times"></i>fa-times</li>
                             <li><i class="fa fa-times-circle"></i>fa-times-circle</li>
                             <li><i class="fa fa-times-circle-o"></i>fa-times-circle-o</li>
-                            </div>
+                    </div>
                 </div>
-                </div>
-
- 
-          </div>
+            </div>
+            <footer class="p-3 d-flex justify-content-between bg-white">
+                <span>Copyright © 2020 <a href="https://www.cupcom.com.br/" target="_blank">Cupcom</a>. All rights reserved.</span>
+                <span>Hand-crafted & made with <i class="fas fa-heart ml-2 text-danger"></i></span>
+            </footer>
+        </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -247,5 +253,6 @@
     <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
     <script src="https://kit.fontawesome.com/af562a2a63.js" crossorigin="anonymous"></script>
     <script src="js/root.js"></script>
-  </body>
+</body>
+
 </html>
