atualizacao checkbox pages

--- a/pages/login.html
+++ b/pages/login.html
@@ -86,10 +86,10 @@
 						</div>
 
 					    <div class="dash_remenber mb-2">
-						    <label class="dash_check"> Remenber-me
-		                        <input type="checkbox" />
-		                        <span class="checkmark"></span>
-		                    </label>
+						    <div class="custom-control custom-checkbox">
+								<input type="checkbox" class="custom-control-input" id="customCheck" name="example1">
+								<label class="custom-control-label" for="customCheck">Remenber me</label>
+							</div>
 	                    </div>
 					  <button type="submit" class="btn btn-primary">Sign in</button>
 					</form>
