--- a/form.html
+++ b/form.html
@@ -170,11 +170,9 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" id="gridCheck">
-                                        <label class="form-check-label" for="gridCheck">
-                                            Check me out
-                                        </label>
+                                       <div class="custom-control custom-checkbox">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck" name="example1">
+                                        <label class="custom-control-label" for="customCheck">Check me out</label>
                                     </div>
                                 </div>
                                 <button type="submit" class="btn btn-primary">Sign in</button>
