--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
                         <thead>
                             <tr>
                                 <th style="width: 40px">
-                                    <label class="dash_check">
-                                        <input type="checkbox" />
-                                        <span class="checkmark"></span>
-                                    </label>
+                                    <div class="custom-control custom-checkbox">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck1" name="example1">
+                                        <label class="custom-control-label" for="customCheck1"></label>
+                                    </div>
                                 </th>
                                 <th>Name</th>
                                 <th>Position</th>
@@ -207,10 +207,10 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <label class="dash_check">
-                                        <input type="checkbox" />
-                                        <span class="checkmark"></span>
-                                    </label>
+                                    <div class="custom-control custom-checkbox">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck2" name="example2">
+                                        <label class="custom-control-label" for="customCheck2"></label>
+                                    </div>
                                 </td>
                                 <td>Tiger Nixon</td>
                                 <td>System Architect</td>
@@ -221,10 +221,10 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label class="dash_check">
-                                        <input type="checkbox" />
-                                        <span class="checkmark"></span>
-                                    </label>
+                                    <div class="custom-control custom-checkbox">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck3" name="example3">
+                                        <label class="custom-control-label" for="customCheck3"></label>
+                                    </div>
                                 </td>
                                 <td>Garrett Winters</td>
                                 <td>Accountant</td>
@@ -235,10 +235,10 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label class="dash_check">
-                                        <input type="checkbox" />
-                                        <span class="checkmark"></span>
-                                    </label>
+                                    <div class="custom-control custom-checkbox">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck4" name="example4">
+                                        <label class="custom-control-label" for="customCheck4"></label>
+                                    </div>
                                 </td>
                                 <td>Ashton Cox</td>
                                 <td>Junior Technical Author</td>
@@ -249,10 +249,10 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label class="dash_check">
-                                        <input type="checkbox" />
-                                        <span class="checkmark"></span>
-                                    </label>
+                                    <div class="custom-control custom-checkbox">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck5" name="example5">
+                                        <label class="custom-control-label" for="customCheck5"></label>
+                                    </div>
                                 </td>
                                 <td>Cedric Kelly</td>
                                 <td>Senior Javascript Developer</td>
@@ -263,10 +263,10 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label class="dash_check">
-                                        <input type="checkbox" />
-                                        <span class="checkmark"></span>
-                                    </label>
+                                    <div class="custom-control custom-checkbox">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck6" name="example6">
+                                        <label class="custom-control-label" for="customCheck6"></label>
+                                    </div>
                                 </td>
                                 <td>Airi Satou</td>
                                 <td>Accountant</td>
@@ -277,10 +277,10 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label class="dash_check">
-                                        <input type="checkbox" />
-                                        <span class="checkmark"></span>
-                                    </label>
+                                    <div class="custom-control custom-checkbox">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck7" name="example7">
+                                        <label class="custom-control-label" for="customCheck7"></label>
+                                    </div>
                                 </td>
                                 <td>Brielle Williamson</td>
                                 <td>Integration Specialist</td>
@@ -291,10 +291,10 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label class="dash_check">
-                                        <input type="checkbox" />
-                                        <span class="checkmark"></span>
-                                    </label>
+                                    <div class="custom-control custom-checkbox">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck8" name="example8">
+                                        <label class="custom-control-label" for="customCheck8"></label>
+                                    </div>
                                 </td>
                                 <td>Herrod Chandler</td>
                                 <td>Sales Assistant</td>
@@ -305,10 +305,10 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label class="dash_check">
-                                        <input type="checkbox" />
-                                        <span class="checkmark"></span>
-                                    </label>
+                                    <div class="custom-control custom-checkbox">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck9" name="example9">
+                                        <label class="custom-control-label" for="customCheck9"></label>
+                                    </div>
                                 </td>
                                 <td>Rhona Davidson</td>
                                 <td>Integration Specialist</td>
@@ -319,10 +319,10 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label class="dash_check">
-                                        <input type="checkbox" />
-                                        <span class="checkmark"></span>
-                                    </label>
+                                    <div class="custom-control custom-checkbox">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck10" name="example10">
+                                        <label class="custom-control-label" for="customCheck10"></label>
+                                    </div>
                                 </td>
                                 <td>Colleen Hurst</td>
                                 <td>Javascript Developer</td>
@@ -333,10 +333,10 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label class="dash_check">
-                                        <input type="checkbox" />
-                                        <span class="checkmark"></span>
-                                    </label>
+                                    <div class="custom-control custom-checkbox">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck11" name="example11">
+                                        <label class="custom-control-label" for="customCheck11"></label>
+                                    </div>
                                 </td>
                                 <td>Sonya Frost</td>
                                 <td>Software Engineer</td>
@@ -347,10 +347,10 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label class="dash_check">
-                                        <input type="checkbox" />
-                                        <span class="checkmark"></span>
-                                    </label>
+                                    <div class="custom-control custom-checkbox">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck12" name="example12">
+                                        <label class="custom-control-label" for="customCheck12"></label>
+                                    </div>
                                 </td>
                                 <td>Jena Gaines</td>
                                 <td>Office Manager</td>
@@ -361,10 +361,10 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label class="dash_check">
-                                        <input type="checkbox" />
-                                        <span class="checkmark"></span>
-                                    </label>
+                                    <div class="custom-control custom-checkbox">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck13" name="example13">
+                                        <label class="custom-control-label" for="customCheck13"></label>
+                                    </div>
                                 </td>
                                 <td>Quinn Flynn</td>
                                 <td>Support Lead</td>
@@ -375,10 +375,10 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label class="dash_check">
-                                        <input type="checkbox" />
-                                        <span class="checkmark"></span>
-                                    </label>
+                                    <div class="custom-control custom-checkbox">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck14" name="example14">
+                                        <label class="custom-control-label" for="customCheck14"></label>
+                                    </div>
                                 </td>
                                 <td>Charde Marshall</td>
                                 <td>Regional Director</td>
@@ -389,10 +389,10 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label class="dash_check">
-                                        <input type="checkbox" />
-                                        <span class="checkmark"></span>
-                                    </label>
+                                    <div class="custom-control custom-checkbox">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck15" name="example15">
+                                        <label class="custom-control-label" for="customCheck15"></label>
+                                    </div>
                                 </td>
                                 <td>Haley Kennedy</td>
                                 <td>Senior Marketing Designer</td>
