--- a/form.html
+++ b/form.html
@@ -217,6 +217,21 @@
                                 <input type="file" class="custom-file-input" id="customFile">
                                 <label class="custom-file-label" for="customFile">Choose file</label>
                             </div>
+
+                            <h6 class="mt-3">Input Group</h6>
+                            <div class="input-group my-3">
+                                <div class="input-group-prepend">
+                                  <span class="input-group-text left-group" id="basic-addon1">@</span>
+                                </div>
+                                <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                              </div>
+                              
+                              <div class="input-group mb-3">
+                                <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                                <div class="input-group-append">
+                                  <span class="input-group-text right-group" id="basic-addon2">@example.com</span>
+                                </div>
+                              </div>
                         </div>
                     </div>
                 </div>
