--- a/pages/register.html
+++ b/pages/register.html
@@ -26,7 +26,7 @@
 					<label>Username</label>
 					  <div class="input-group mb-3">
 						  <div class="input-group-prepend">
-						    <span class="input-group-text" id="basic-addon1"><i class="fas fa-user"></i></span>
+						    <span class="input-group-text left-group" id="basic-addon1"><i class="fas fa-user"></i></span>
 						  </div>
 						  <input type="text" class="form-control" placeholder="username" aria-label="username" aria-describedby="basic-addon1">
 						</div>
@@ -35,7 +35,7 @@
 						<label>E-mail Address</label>
 					  <div class="input-group mb-3">
 						  <div class="input-group-prepend">
-						    <span class="input-group-text" id="basic-addon1"><i class="far fa-envelope"></i></span>
+						    <span class="input-group-text left-group" id="basic-addon1"><i class="far fa-envelope"></i></span>
 						  </div>
 						  <input type="text" class="form-control" placeholder="email@email.com" aria-label="E-mail" aria-describedby="basic-addon1">
 						</div>
@@ -46,7 +46,7 @@
 					  	</div>
 						<div class="input-group mb-3">
 						  <div class="input-group-prepend">
-						    <span class="input-group-text" id="basic-addon1"><i class="fas fa-lock"></i></span>
+						    <span class="input-group-text left-group" id="basic-addon1"><i class="fas fa-lock"></i></span>
 						  </div>
 						  <input type="password" class="form-control" id="password" placeholder="****" aria-label="Password" aria-describedby="basic-addon1">
 						</div>
@@ -71,7 +71,7 @@
 					  	</div>
 						<div class="input-group mb-3">
 						  <div class="input-group-prepend">
-						    <span class="input-group-text" id="basic-addon1"><i class="fas fa-lock"></i></span>
+						    <span class="input-group-text left-group" id="basic-addon1"><i class="fas fa-lock"></i></span>
 						  </div>
 						  <input type="password" class="form-control" id="password-verify" placeholder="****" aria-label="Password" aria-describedby="basic-addon1">
 						</div>
@@ -82,7 +82,7 @@
 
 				</div>
 			</div>
-			<div class="dash__page-slide h-100 d-none d-lg-flex justify-content-center align-items-center col-lg-4 pl-0 gradient-register">
+			<div class="dash__page-slide h-100 d-none d-lg-flex justify-content-center align-items-center col-lg-4 p-0 gradient-register">
 			<div class="dash__text-login text-center">
 				<h2 class="font-weight-bold text-white">Already Have an Account</h2>
 				<span class="d-block text-white">Simply login to your account by clicking the login Button</span>
