--- a/pages/forgot.html
+++ b/pages/forgot.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="dash__page-login container-fluid">
 		<div class="row p-h-100">
-			<div class="dash__page-slide p-h-100 d-none d-lg-block col-lg-4 pl-0">
+			<div class="dash__page-slide p-h-100 d-none d-lg-block col-lg-4 p-0">
 				
 				<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 				  <ol class="carousel-indicators">
@@ -62,7 +62,7 @@
 						<label>E-mail Address</label>
 					  <div class="input-group mb-3">
 						  <div class="input-group-prepend">
-						    <span class="input-group-text" id="basic-addon1"><i class="far fa-envelope"></i></span>
+						    <span class="input-group-text left-group" id="basic-addon1"><i class="far fa-envelope"></i></span>
 						  </div>
 						  <input type="text" class="form-control" placeholder="email@email.com" aria-label="E-mail" aria-describedby="basic-addon1">
 						</div>
