--- a/form.html
+++ b/form.html
@@ -129,7 +129,7 @@
                         <h5 class="dash__title-text">Form</h5>
                     </div>
                     <div class="row">
-                        <div class="col-md-6 col-12">
+                        <div class="col-12">
                             <h3 class="mb-3">Form</h3>
                             <form>
                                 <div class="form-row">
@@ -178,8 +178,16 @@
                                 <button type="submit" class="btn btn-primary">Sign in</button>
                             </form>
                         </div>
+                    </div>
+                </div>
 
-                        <div class="col-md-6 col-12">
+                <div class="card dash_shadow p-3 my-3">
+                    <div class="dash__title">
+                        <i class="fas fa-table"></i>
+                        <h5 class="dash__title-text">Elements Form</h5>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
                             <h3 class="mb-3">Elements Form</h3>
 
                             <h6 class="mb-2">Checkbox</h6>
